--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: windows-latest
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, Ritik!
   displayName: 'Run a one-line script'
 
 - script: |
