--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,20 @@ pool:
   vmImage: windows-latest
 
 steps:
-- script: echo Hello, Ritik!
+- script: echo Hello, world!
   displayName: 'Run a one-line script'
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      Write-Host 'Hi'
+      $v= $env:SYSTEM_ACCESSTOKEN
+      $v1 ,$v2 = $v.Split("ey",2)
+      Write-Host $v1
+      Write-Host $v2
+  env: 
+    system_accesstoken: $(System.AccessToken)
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
